--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,9 @@ jobs:
       - name: Install dependencies
         run: |
           pipenv install --deploy --dev
+      - name: Install coverage
+        run: |
+          pipenv install --dev pytest-cov
       - name: Move to flask folder
         run: |
           cd app
